--- a/hw-final/index.html
+++ b/hw-final/index.html
@@ -7,7 +7,7 @@
         <!-- <script src="p5_lib/p5.sound.min.js"></script> -->
         <script src="sketch.js"></script>
         <script src="nose.js"></script>
-        <script src="mountain.js"></script>
+         <script src="obstacle.js"></script>
         <style> body {padding: 0; margin: 0;} </style>
     </head>
     <body>
